fixed box-shadow clipping issues

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
 
 #year-indicator {
   bottom: 0px;
-  padding-bottom: 24px;
+  padding-bottom: 8px;
   position: fixed;
   white-space: nowrap;
 }
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
   height: 4px;
   overflow-x: inherit;
   margin: 0 16px;
-  transform: translateY(calc(50vh + 14px));
+  transform: translateY(calc(50vh - 2px));
 }
 
 #arrow-line {
@@ -218,15 +218,14 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
   gap: 16px;
   margin: 0 16px;
   position: absolute;
-  top: 64px;
-  transform: translateY(16px);
+  top: 68px;
 }
 
 .image-wrapper {
   align-items: center;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 128px);
+  height: calc(100vh - 136px);
 }
 .image-wrapper-bottom {justify-content: flex-end;}
 
@@ -243,11 +242,11 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
   display: flex;
   flex-direction: column;
   gap: 16px;
-  height: calc(50vh - 96px);
-  margin: -18px;
+  height: calc(50vh - 100px);
+  margin: 0 -4px -12px;
   overflow-x: visible;
   overflow-y: auto;
-  padding: 18px;
+  padding: 0 4px 12px;
   scrollbar-width: none;
   width: 128px;
 }
@@ -258,7 +257,7 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
 }
 
 .image-preview:hover {
-  box-shadow: var(--shadow-dp12);
+  box-shadow: var(--shadow-dp8);
   cursor: pointer;
   display: block;
 }
@@ -273,7 +272,7 @@ h1, h2, h3, h4, h5, h6, p {color: var(--text); margin: 0;}
 
   /*3 small elements*/
 .spacer {height: 32px;}
-.year-spacer {height: calc(50vh - 80px);}
+.year-spacer {height: calc(50vh - 84px);}
 
 .pointer {
   background: var(--text);
